<resources>
    <string name="app_name">GeneralAPP</string>
    <string name="camara">TOMAR FOTO</string>
    <string name="title_activity_menu_lateral">menuLateral</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="textViewName">Name</string>
    <string name="textViewPassword">Password</string>
    <string name="editTextName">miyen</string>
    <string name="editTextPassword">123</string>
    <string name="btnAdd">agregar</string>
    <string name="btnMostrar">mostrar</string>
    <string name="btnEliminar">eliminar</string>
    <string name="btnMostrarUno">buscar el ingresado</string>
    <string name="btnEliminarUno">eliminar el ingresado</string>
    <string name="btnUpdate">modificar</string>
    <string name="btnLogin">iniciar Sesion</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_maps">Map</string>
</resources>
